--- a/ascet/style.css
+++ b/ascet/style.css
@@ -1,3 +1,30 @@
+/* nav menu style  */
+nav>ul{
+    display:flex;
+}
+nav li{
+    list-style: none;
+    margin-left: 10px;
+    padding: 5px;
+}
+nav li a{
+    text-decoration: none;
+    color: black;
+}
+nav li:hover{
+    background-color: rgb(240, 233, 224);
+}
+/* nested menu styles */
+nav li .dropdown{
+    display: none;
+}
+nav li:hover> .dropdown{
+    display: block;
+    position: absolute;
+    background-color: rgb(143, 234, 234);
+    padding-left: 10px;
+}
+/* table-style */
 table{
     border-collapse: collapse;
 }
