--- a/ascet/style.css
+++ b/ascet/style.css
@@ -1,34 +1,62 @@
 /* nav menu style  */
-nav>ul{
-    display:flex;
+nav>ul {
+    display: flex;
 }
-nav li{
+
+nav li {
     list-style: none;
     margin-left: 10px;
     padding: 5px;
 }
-nav li a{
+
+nav li a {
     text-decoration: none;
     color: black;
 }
-nav li:hover{
+
+nav li:hover {
     background-color: rgb(240, 233, 224);
 }
+
 /* nested menu styles */
-nav li .dropdown{
+nav li .dropdown {
     display: none;
 }
-nav li:hover> .dropdown{
+
+nav li:hover>.dropdown {
     display: block;
     position: absolute;
     background-color: rgb(143, 234, 234);
     padding-left: 10px;
 }
+
 /* table-style */
-table{
+table {
     border-collapse: collapse;
 }
-td,th{
+
+td,
+th {
     border: 1px solid black;
     padding: 5px 10px;
+}
+/* bonus moddule er */
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    color: red;
+    background-color: aqua;
+}
+
+input:focus {
+    color: red;
+    padding: 10px;
+    outline: none;
+    border:1px solid rgb(157, 3, 157)
+}
+.bonus>li:nth-child(3n+1){
+    color: red;
 }
